--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Whole-sale-dealer-frontend",
-    "slug": "Whole-sale-dealer-frontend",
+    "name": "WholeSaleMobile",
+    "slug": "WholeSaleMobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
