--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
