--- a/package.json
+++ b/package.json
@@ -35,19 +35,19 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-paper": "^4.9.2",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-snackbar-component": "^1.1.12",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-form": "^8.3.7",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-gesture-handler": "~1.10.2"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
