--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-picker": "^4.4.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modalize": "^2.0.12",
     "react-native-paper": "^4.9.2",
