--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-sectioned-multi-select": "^0.8.1",
     "react-native-snackbar-component": "^1.1.12",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
