--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "redux": "^4.1.1",
     "redux-form": "^8.3.7",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "expo-image-picker": "~10.2.2",
+    "expo-permissions": "~12.1.1",
+    "expo-image-manipulator": "~9.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
