--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-asset": "~8.3.2",
+    "expo-camera": "^12.0.3",
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
+    "expo-image-manipulator": "~9.2.2",
+    "expo-image-picker": "~10.2.2",
     "expo-linking": "~2.3.1",
+    "expo-location": "^13.0.4",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
@@ -39,6 +43,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-picker": "^4.4.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-modal": "^13.0.0",
     "react-native-modalize": "^2.0.12",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
@@ -51,10 +56,7 @@
     "redux": "^4.1.1",
     "redux-form": "^8.3.7",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
-    "expo-image-picker": "~10.2.2",
-    "expo-permissions": "~12.1.1",
-    "expo-image-manipulator": "~9.2.2"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
