--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "redux": "^4.1.1",
     "redux-form": "^8.3.7",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "expo-notifications": "~0.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
